@@ -1,5 +1,11 @@
 2006-03-06 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/openvrml/browser.cpp
+	(openvrml::browser::vrml_from_url_creator::operator()() const):
+	Pass the stream type to browser::create_from_from_stream.
+
+2006-03-06 Braden McDaniel  <braden@endoframe.com>
+
 	* src/libopenvrml/openvrml/browser.cpp: Removed obsolete
 	doc-comments.
 
